--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ mt_afterQC : "/home/mireia/Bioinfo/Hail_folder/gonl_AFTERQC.mt" # path where the
 gnomad_sites : ""
 
 ## LOGs
-verbosity : true # if true a csv with variants deleted per step will be create. This GREATLY affects the execution time.
+verbosity : true # if true a csv with variants deleted per step will be create. This increases the execution time.
 plots: false # create box plot showing the distribuition of each QC parameter
 
 ## MODULES TO RUN
