--- a/config.yaml
+++ b/config.yaml
@@ -5,12 +5,10 @@ ref_gen : "GRCh37" # reference genome from the VCFs
 mt_from_vcf : "/home/mireia/Bioinfo/Hail_folder/gonl_subset3000.mt" # path where the original matrix will be saved
 seq_type : "WGS" # sequencing typw
 mt_afterQC : "/home/mireia/Bioinfo/Hail_folder/gonl_AFTERQC.mt" # path where the after QC matrix will be
-gnomad_sites_GRCh37 : "" # reference for GRCh37 
-gnomad_sites_GRCh38 : "" # reference for GRCh38
 
 ## LOGs
 verbosity : true # if true a csv with variants deleted per step will be create. This increases the execution time.
-plots: false # create box plot showing the distribuition of each QC parameter
+plots: false # create box plot showing the distribution of each QC sample parameter
 
 ## MODULES TO RUN
 preprocessing : true # if true the module will be run
@@ -51,6 +49,8 @@ sample_filters:
   CHARR_threshold : 0.05
   R_TI_TV_WES_threshold : [3.0 , 3.3]
   R_TI_TV_WGS_threshold : [2.0 , 2.1]
+gnomad_sites_GRCh37 : "" # reference for GRCh37 
+gnomad_sites_GRCh38 : "" # reference for GRCh38
 
 ## RELATEDNESS
 table_with_subset : "./variants_for_pca.ht"
